--- a/NATURE_GIFT/css/style.css
+++ b/NATURE_GIFT/css/style.css
@@ -188,8 +188,9 @@ nav{
     position: absolute;
     top: 100%;
     left: 0;
+    text-align: left;
     background-color: #A0E7E5;
-    min-width: 200px;
+    min-width: 150px;
     border-radius: 0 0 15px 15px;
     box-shadow: 0 8px 16px rgba(0,0,0,0.1);
     opacity: 0;
